[gd_scene load_steps=3 format=2]

[ext_resource path="res://objects/weapons/staves/staff.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/fire_woosh.mp3" type="AudioStream" id=2]

[node name="Staff" type="Node2D"]
position = Vector2( 11.3892, 0 )
script = ExtResource( 1 )

[node name="WeaponContainer" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="WeaponContainer"]

[node name="Hand" type="Sprite" parent="WeaponContainer"]

[node name="ChargeParticle" type="Particles2D" parent="WeaponContainer"]
amount = 30

[node name="ChargeLight" type="Light2D" parent="WeaponContainer"]

[node name="WeaponAnimation" type="AnimationPlayer" parent="."]

[node name="SoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="HeavyCooldown" type="Timer" parent="."]
one_shot = true

[node name="LightCooldown" type="Timer" parent="."]
one_shot = true
